refactor(BJS2-85499): улучшил задачу "Регистрация пользователя"