@@ -1,28 +1,33 @@
 package school.faang.bjs2_85499;
 
+import lombok.ToString;
+
 import java.util.Set;
 
+@ToString
 public class User {
     private String name;
     private int age;
     private String job;
     private String address;
 
+    private static final int MIN_AGE = 18;
     public static final Set<String> VALID_JOBS = Set.of("Google", "Uber", "Amazon");
     public static final Set<String> VALID_ADDRESSES = Set.of("London", "New York", "Amsterdam");
 
     public User(String name, int age, String job, String address) {
-        if (name == null || name.trim().isEmpty()) {
-            throw new IllegalArgumentException("The name cannot be empty");
+        if (name == null || name.isBlank()) {
+            throw new IllegalArgumentException("The name cannot be empty. You entered: " + name);
         }
-        if (age < 18) {
-            throw new IllegalArgumentException("The age must be at least 18");
+        if (age < MIN_AGE) {
+            throw new IllegalArgumentException("The age must be at least " + MIN_AGE + ". You entered: " + age);
         }
         if (!VALID_JOBS.contains(job)) {
-            throw new IllegalArgumentException("Unacceptable place of work: " + job);
+            throw new IllegalArgumentException("Unacceptable place of work: " + job +
+                    ". Allowed values: " + VALID_JOBS);
         }
         if (!VALID_ADDRESSES.contains(address)) {
-            throw new IllegalArgumentException("Invalid address: " + address);
+            throw new IllegalArgumentException("Invalid address: " + address + ". Allowed values: " + VALID_ADDRESSES);
         }
         this.name = name;
         this.age = age;
@@ -35,7 +40,7 @@ public class User {
             User ilyas = new User("Ilyas", 31, "Google", "New York");
             System.out.println("OK: " + ilyas);
         } catch (IllegalArgumentException e) {
-            System.out.println("ERROR: " + e.getMessage());
+            System.out.println("BUG: " + e.getMessage());
         }
         try {
             User lena = new User("Lena", 25, "Astronaut", "Ufa");
@@ -47,22 +52,13 @@ public class User {
             User sasha = new User("Sasha", 36, "Uber", "Amsterdam");
             System.out.println("OK: " + sasha);
         } catch (IllegalArgumentException e) {
-            System.out.println("ERROR: " + e.getMessage());
+            System.out.println("BUG: " + e.getMessage());
         }
         try {
             User igor = new User("Igor", 28, "Amazon", "London");
             System.out.println("OK: " + igor);
         } catch (IllegalArgumentException e) {
-            System.out.println("ERROR: " + e.getMessage());
+            System.out.println("BUG: " + e.getMessage());
         }
-    }
-
-    @Override
-    public String toString() {
-        return "User {" + "name " + name + ", " +
-                "age " + age + ", " +
-                "job " + job + ", " +
-                "address " + address +
-                '}';
     }
 }
